--- a/MyOrder/MyOrder/MyOrder.csproj
+++ b/MyOrder/MyOrder/MyOrder.csproj
@@ -47,6 +47,9 @@
     <Compile Include="View\Home.xaml.cs">
       <DependentUpon>Home.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\ProductList.xaml.cs">
+      <DependentUpon>ProductList.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\WareHouseDetailPage.xaml.cs">
       <DependentUpon>WareHouseDetailPage.xaml</DependentUpon>
     </Compile>
@@ -91,6 +94,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="View\WareHouseDetailPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="View\ProductList.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
